src/objects/REVVY__MnQuoteItemSubLine__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Category_Group_QuoteLine__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.Discount_Category_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Modified_Field__c</fullName>
        <label>Distributor Modified Field</label>
        <picklist>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Transfer Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_SKU_Id__c</fullName>
        <label>Local SKU Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Add_On_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Add-On Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Attribute_Adjustment_Id__c</fullName>
        <label>Attribute Adjustment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Below_Floor__c</fullName>
        <formula>IF(OCD_Overridden_Price__c &lt; OCD_Price_Floor__c , &quot;Y&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Below Floor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Distributor_Type__c</fullName>
        <label>Distributor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Markup</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_ExtId__c</fullName>
        <description>for cloning only</description>
        <externalId>true</externalId>
        <label>OCD ExtID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OCD_Final_Price__c</fullName>
        <formula>OCD_Overridden_Price__c  +  OCD_Add_On_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Final_Transfer_Price__c</fullName>
        <description>Final Transfer Price to the Distributor</description>
        <label>Final Transfer Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_IDN_Quote_Item_Sub_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN Quote Item Sub Line</label>
        <referenceTo>REVVY__MnQuoteItemSubLine__c</referenceTo>
        <relationshipLabel>Quote Item Sub Line</relationshipLabel>
        <relationshipName>Quote_Item_Sub_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_Is_Package__c</fullName>
        <formula>IF( BEGINS(REVVY__Catalog_Node__r.REVVY__Id__c, &apos;Classic&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_LOB__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.LOB__c )</formula>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Line_Trade_In_Value__c</fullName>
        <label>OCD Line Trade In Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_List_Price_Override__c</fullName>
        <label>List Price Override</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Managed_Service_Fee__c</fullName>
        <label>Managed Service Fee</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Margin__c</fullName>
        <description>Margin for Distributor based on Final End User Price</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Mark_Up__c</fullName>
        <label>Mark Up</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Markup__c</fullName>
        <description>Mark Up on Standard Transfer Price for Distributor</description>
        <label>Mark Up</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Behavioral_Disc__c</fullName>
        <label>Max Behavioral Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Vol_Disc__c</fullName>
        <label>Max Volume Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Original_Unit_Price__c</fullName>
        <label>Original Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Overridden_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overridden Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Parent_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used to display quote sub-line on quote page as a related list.</description>
        <label>Parent Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Quote Item Sub Line</relationshipLabel>
        <relationshipName>Quote_Item_Sub_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>As Per Quote Type</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Purchase Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_PmtTypeRO__c</fullName>
        <label>PmtTypeRO</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Pr_Conversion_Factor__c</fullName>
        <formula>REVVY__Catalog_Node__r.Pricing_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCD Pr Conversion Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Price_Floor__c</fullName>
        <label>Price Floor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Pricing_Info__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>OCD Pricing Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCD_Product_ID__c</fullName>
        <formula>REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Product_Type__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.Product_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_SKU__c</fullName>
        <formula>IF( ISBLANK( Local_SKU_Id__c ) ,  OCD_Product_ID__c , Local_SKU_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Site_Index__c</fullName>
        <label>Site Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Standard_Transfer_Price__c</fullName>
        <description>Standard Transfer Price to Distributor determined from Distributor Price Plan</description>
        <label>Standard Transfer Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Trade_In_Equipment_Name__c</fullName>
        <label>Trade In Equipment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Trade_In_Name_Override__c</fullName>
        <formula>IF( ISBLANK( OCD_Trade_In_Equipment_Name__c ) ,  REVVY__Catalog_Node__r.REVVY__LocaleName_F__c , OCD_Trade_In_Equipment_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade In Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Trade_In_Serial_Number__c</fullName>
        <description>Serial Number of traded in equipment</description>
        <label>Trade In Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Trade_In_Value__c</fullName>
        <description>Trade In Value</description>
        <label>Trade In Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Name__c</fullName>
        <formula>REVVY__QuoteItem__r.REVVY__Catalog_Node__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used to display quote sub-line on quote page as a related list.</description>
        <label>Parent Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Item Sub Line</relationshipLabel>
        <relationshipName>Quote_Item_Sub_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(  OCD_Product_ID__c = &apos;TI_CL_COMP&apos;  || OCD_Product_ID__c = &apos;TI_IH_COMP&apos;,  OCD_Trade_In_Name_Override__c , REVVY__Catalog_Node__r.REVVY__LocaleName_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Product Type of Product. Used in Roll Up formulae.</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1Absolute__c</fullName>
        <description>Absolute value of Adjustment 1</description>
        <inlineHelpText>Absolute value of Adjustment 1</inlineHelpText>
        <label>Mark-up (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1Type__c</fullName>
        <description>Determines whether the Adjustment 1 is based on percentage (e.g., 20%) or on an absolute amount (e.g., $100).</description>
        <inlineHelpText>Determines whether the Adjustment 1 is based on percentage (e.g., 20%) or on an absolute amount (e.g., $100).</inlineHelpText>
        <label>Mark-up Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1__c</fullName>
        <description>Percent value of Adjustment 1</description>
        <inlineHelpText>Percent value of Adjustment 1</inlineHelpText>
        <label>Mark-up (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Billing_Frequency_WF__c</fullName>
        <description>How often the customer is charged for a product. Options are one-time, weekly, monthly, and yearly.</description>
        <inlineHelpText>How often the customer is charged for a product. Options are one-time, weekly, monthly, and yearly.</inlineHelpText>
        <label>Billing Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Catalog_Node__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique Salesforce ID for the product that this price list line refers to.</description>
        <inlineHelpText>Unique Salesforce ID for the product that this price list line refers to.</inlineHelpText>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>QuoteItemSubLine</relationshipLabel>
        <relationshipName>QuoteItemSubLine</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__CostPrice__c</fullName>
        <description>Cost Price of a product in quote sub line</description>
        <inlineHelpText>Cost Price of a product in quote sub line</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount_Absolute__c</fullName>
        <description>Value of the absolute discount that is applied to the product (e.g., $20 off).</description>
        <inlineHelpText>Value of the absolute discount that is applied to the product (e.g., $20 off).</inlineHelpText>
        <label>Discount (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount_Type__c</fullName>
        <description>Whether the discount is an absolute discount (e.g., $20 off) or a percentage discount (e.g., 20% off).</description>
        <inlineHelpText>Whether the discount is an absolute discount (e.g., $20 off) or a percentage discount (e.g., 20% off).</inlineHelpText>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount__c</fullName>
        <description>Value of the percentage discount that is applied to the product (e.g., 20% off).</description>
        <inlineHelpText>Value of the percentage discount that is applied to the product (e.g., 20% off).</inlineHelpText>
        <label>Man. Disc. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Discountable__c</fullName>
        <description>Specifies If manual discount can be applied as defined in the Catalog.</description>
        <formula>REVVY__Catalog_Node__r.REVVY__Discountable__c</formula>
        <inlineHelpText>Specifies If manual discount can be applied as defined in the Catalog.</inlineHelpText>
        <label>Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__ExtId__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Quote Item Sub Line ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__Extended_Price_Display_F__c</fullName>
        <formula>REVVY__Extended_Price_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext. Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Extended_Price_F__c</fullName>
        <description>Unit price of product multiplied by the quantity of products. (Unit price x quantity)</description>
        <formula>REVVY__Unit_Price__c * REVVY__Quantity__c</formula>
        <inlineHelpText>Unit price of product multiplied by the quantity of products. (Unit price x quantity)</inlineHelpText>
        <label>Ext. Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__FreezePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Freezes the pricing and prevents manual discounts on this line.</description>
        <inlineHelpText>Freezes the pricing and prevents manual discounts on this line</inlineHelpText>
        <label>Freeze Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if manual discount is allowed.</description>
        <inlineHelpText>Controls if manual discount is allowed..</inlineHelpText>
        <label>Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__GroupNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort sub-lines of a configurable product.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort sub-lines of a configurable product.</inlineHelpText>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Deprecated</description>
        <externalId>true</externalId>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__IsBelowLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether the quote item is a below-the-line recommendation. Items flagged shouldn&apos;t be included with final calculations.</description>
        <inlineHelpText>Flag indicates whether the quote item is a below-the-line recommendation. Items flagged shouldn&apos;t be included with final calculations.</inlineHelpText>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsInstallBase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether the subline Install Base Relevant. Copied from MnCatalogNode__c when quote item subline is created.</description>
        <label>Install Base Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemCostPrice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This attribute is to track if the Cost price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the Cost price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is Cost Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemListPrice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This attribute is to track if the List price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the List price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is List Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemUnitPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This attribute is to track if the Unit price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the Unit price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is Unit Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__LineType__c</fullName>
        <label>Tracked On</label>
        <picklist>
            <picklistValues>
                <fullName>Not tracked on contract</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__MarginAbsolute__c</fullName>
        <description>Absolute value of the margin</description>
        <inlineHelpText>Absolute value of the margin</inlineHelpText>
        <label>Margin (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__MarginType__c</fullName>
        <description>Determines whether the Margin is based on percentage (e.g., 20%) or on an absolute amount(e.g., $100).</description>
        <inlineHelpText>Determines whether the Margin is based on percentage (e.g., 20%) or on an absolute amount(e.g., $100).</inlineHelpText>
        <label>Margin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Margin__c</fullName>
        <description>Percent value of the margin</description>
        <inlineHelpText>Percent value of the margin</inlineHelpText>
        <label>Margin ( % )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__NeedsApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set by the system when the workflow suggests an approval is needed for the underlying quote.</description>
        <inlineHelpText>This flag is set by the system when the workflow suggests an approval is needed for the underlying quote.</inlineHelpText>
        <label>Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__OptionNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort sub-lines of a configurable product.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort sub-lines of a configurable product.</inlineHelpText>
        <label>Option Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceDisplay_F__c</fullName>
        <formula>REVVY__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceListLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the Price List Line object used to derive the List Price for this product.</description>
        <inlineHelpText>Unique ID of the Price List Line object used to derive the List Price for this product.</inlineHelpText>
        <label>Price List Line</label>
        <referenceTo>REVVY__MnPriceListLine__c</referenceTo>
        <relationshipLabel>QuoteSubLineItem</relationshipLabel>
        <relationshipName>QuoteSubLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Price__c</fullName>
        <description>List price of product.</description>
        <inlineHelpText>List price of product.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of products.</description>
        <inlineHelpText>Quantity of products.</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteItem__c</fullName>
        <description>Unique ID of the line item (i.e., the quote item) in the quote.</description>
        <inlineHelpText>Unique ID of the line item (i.e., the quote item) in the quote.</inlineHelpText>
        <label>Quote Item</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>QuoteItemSubLine</relationshipLabel>
        <relationshipName>QuoteItemSubLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__SectionNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields  are used internally to sort sub-lines of a configurable product.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields  are used internally to sort sub-lines of a configurable product.</inlineHelpText>
        <label>Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__SourceContractItemSubLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Contract Item Sub Line</label>
        <referenceTo>REVVY__MnContractItemSubLine__c</referenceTo>
        <relationshipLabel>Quote Item Sub Line</relationshipLabel>
        <relationshipName>Quote_Item_Sub_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__TotalCostPrice__c</fullName>
        <description>Total Cost (taking quantity into account).</description>
        <formula>IF (OR(ISNULL(REVVY__CostPrice__c), ISBLANK(REVVY__CostPrice__c)), null, (REVVY__CostPrice__c * REVVY__Quantity__c))</formula>
        <inlineHelpText>Total Cost Price Including Quantity.</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Total_Price_Before_Discount__c</fullName>
        <description>Aggregate price before any discounts are applied.</description>
        <formula>IF (OR(ISNULL(REVVY__Price__c) , ISBLANK(REVVY__Price__c), REVVY__Price__c &lt;= 0) ,
0,
(REVVY__Price__c * REVVY__Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate price before any discounts are applied.</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__UID__c</fullName>
        <description>Unique ID of the BOM from the Configuration Engine.</description>
        <inlineHelpText>Unique ID of the BOM from the Configuration Engine.</inlineHelpText>
        <label>UID Configured BOM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__UISection__c</fullName>
        <description>Name of the UI section that is returned by the product configuration.</description>
        <inlineHelpText>Name of the UI section that is returned by the product configuration.</inlineHelpText>
        <label>Section</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Unit_Price_F__c</fullName>
        <formula>CASE( REVVY__Discount_Type__c , &apos;Absolute&apos;, (REVVY__Price__c - REVVY__Discount_Absolute__c) , REVVY__Price__c * (1 - REVVY__Discount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated)Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Unit_Price__c</fullName>
        <description>Unit price of product (list price less the discount)</description>
        <inlineHelpText>Unit price of product (list price less the discount)</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__VolDiscAbsolute__c</fullName>
        <description>Total volume discount off of list price (e.g., $100 off).</description>
        <inlineHelpText>Total volume discount off of list price (e.g., $100 off).</inlineHelpText>
        <label>Vol. Disc. (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__VolDisc__c</fullName>
        <description>Percentage volume discount off of list price (e.g., 20% off).</description>
        <inlineHelpText>Percentage volumn discount off of list price (e.g., 20% off).</inlineHelpText>
        <label>Vol. Disc. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>